更新模型和代码

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         // --- 加载你的3D模型 ---
         const loader = new GLTFLoader();
-        const modelUrl = './古建筑.glb'; // 请替换为你的模型路径 (支持 .glb, .gltf, .obj 等)
+        const modelUrl = './test.glb'; // 请替换为你的模型路径 (支持 .glb, .gltf, .obj 等)
 
         loader.load(
             modelUrl,
